--- a/04-awx.yaml
+++ b/04-awx.yaml
@@ -21,3 +21,25 @@ spec:
       storage: 10Gi
   projects_persistence: true
   projects_existing_claim: awx-projects-claim
+
+# Kustomize:
+# 	( cd /usr/local/bin/ && curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"  | bash )
+# 
+# Minikube:
+# 	minikube delete && minikube start --kubernetes-version=v1.23.17 --driver=none --addons=ingress,storage-provisioner
+# 
+# 
+# git clone https://github.com/Fiooodooor/awx.git awx
+# git clone https://github.com/Fiooodooor/awx-operator.git awx-operator
+# 
+# INTEL_WEB="awx.krakow.igk.intel.com"
+# openssl req -x509 -nodes -days 1460 -newkey rsa:2048 -out tls-cert.pem -keyout tls-key.pem -subj "/CN=${INTEL_WEB}/O=${INTEL_WEB}" -addext "subjectAltName = DNS:${INTEL_WEB}"
+# 
+# echo -e '\n---\n' >> 01-secret.yaml
+# kubectl -n automation create secret tls awx-fqdn-secret-tls --cert=./tls-cert.pem --key=./tls-key.pem --dry-run=client -o yaml >> 01-secret.yaml
+# kubectl apply -f 01-secret.yaml
+# 
+# mkdir -p /etc/data/postgres
+# mkdir -p /etc/data/projects
+# chmod 755 -R /etc/data/
+# kubectl apply -f 02-pv.yaml
